--- a/MyNCS/src/main/webapp/css/style.css
+++ b/MyNCS/src/main/webapp/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #3F72AF;
+    --primary: #0d6efd;
     --secondary: #112D4E;
     --light: #F9F7F7;
     --dark: #222831;
